--- a/demo/demo/src/main/resources/templates/errorPage.html
+++ b/demo/demo/src/main/resources/templates/errorPage.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </nav>
-    <div class="alert alert-danger" role="alert" th:text="'No city found by the name '+${cityName}+'. Please check the spelling.'">
+    <div class="alert alert-danger" role="alert" th:text="'No city found the name '+${cityName}+'. Please check the spelling.'">
         
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
